very last commit mr mikulka

--- a/css/css.css
+++ b/css/css.css
@@ -486,7 +486,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-	height: 100%;
+	height: 222px;
 	margin-bottom: 100px;
 }
 
